# pelican-frontend

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile_django  Dockerfile_static  README.md  README.rst  biome.json  docker-compose.yaml  package-lock.json  pyproject.toml  requirements.in  requirements.txt  requirements_base.in  requirements_base.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
.github/workflows/: CI.yml  automerge.yml  ci.yml  docker.yml  i18n.yml  js.yml  lint.yml
api/: models.py  routers.py  urls.py  views.py
backend/: .coveragerc  Dockerfile  credentials.json  default.env  dqv-backend.env  gunicorn_amy01.conf  gunicorn_development.conf  gunicorn_mirek_dev01.conf  gunicorn_runner.sh  manage.py  release-schema.json  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  token.pickle
backend/.tx/: config
backend/api/: api.py  models.py  rabbitmq.py  routers.py  urls.py  views.py
backend/controller/: rabbitmq.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/dqt/: amy01_wsgi.py  api.py  development.py  development.wsgi  development_wsgi.py  docker_wsgi.py  dqt01_wsgi.py  models.py  routers.py  settings.py  tools.py  urls.py  views.py  wsgi.py
backend/exporter/: decorators.py  document.py  elements.py  exceptions.py  gdocs.py  graphs.py  tag.py  urls.py  util.py  views.py
backend/processor/: rabbitmq.py  urls.py  views.py
backend/tests/: __init__.py
core/: settings.py
docs/: browse.rst  changelog.rst  conf.py  export.rst  index.rst  requirements.txt
docs/_static/: openapi.yaml
docs/_templates/: redoc.html  swagger-ui.html
docs/api/: index.rst
docs/backend/: index.rst  integration.rst  overview.rst  reference.rst  settings.rst
docs/contributing/: add-check.rst  add-metadata.rst  addcheck.rst  backend.rst  index.rst  update-check.rst  updatecheck.rst
docs/frontend/: index.rst
docs/reference/: index.rst
exporter/: decorators.py  document.py  exceptions.py  gdocs.py  graphs.py  urls.py
exporter/leaf_tags/: generic.py  resource.py
exporter/template_tags/: base.py  overview.py  resource.py
frontend/: .dockerignore  .env.amy  .env.development  .env.docker  Dockerfile  default.conf  index.html  knip.jsonc  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vue.config.js
gdocs/: main.py  template_example.json  token.pickle  utils.py
tests/: __init__.py
(+232 files in other folders)
