[project]
name = "pelican-frontend"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # ignore incompatible rules
  "D200", "D205",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "D1",  # docstrings
  "PTH",  # pathlib
  "A001",  # Django REST framework
  "A002", # tag type
  "ARG001", "ARG002", "DJ008", "RUF012", "SLF001",  # Django
  "DJ001",  # https://github.com/open-contracting/pelican-backend/issues/87
  "PLR2004",  # magic values
  "PLW2901",  # for-loop variable
  "S104",  # Docker ALLOWED_HOSTS
  "S320",  # lxml untrusted data
  "TRY003",  # error messages
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]  # no __init__.py file
"*/tests/*" = [
  "D",  # docstring
  "PLR0913",  # Too many arguments to function call
  "PLR2004",  # Magic value used
  "PT",  # Django
  "S101",  # assert
]

[tool.isort]
src_paths = ["backend"]
