[project]
name = "pelican-frontend"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "PERF203", "PLR091", "Q000",
    "D1",
    "DJ008",
    "PTH",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright", "format", "type"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_meta", "_Element"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D100", "INP001"]
"{*/signals,*/views,*/migrations/*}.py" = ["ARG001"]
"{*/admin,*/routers,*/views,*/commands/*}.py" = ["ARG002"]
"{*/admin,*/forms,*/models,*/routers,*/serializers,*/translation,*/migrations/*,*/tests/*}.py" = ["RUF012"]
"*/migrations/*" = ["E501"]
"*/tests/*" = [
    "D", "FBT003", "INP001", "PLR2004", "PT", "S", "TRY003",
]
"*/views.py" = [
    "RUF012",  # djangorestframework
]
"*/exporter/*" = [
    "D205",
    "ARG001",  # tag
    "ARG002",  # data
    "RUF012",
    "PLR2004",
    "PLW2901",
    "TRY003",  # errors
]

[tool.coverage.run]
omit = ["*/translations.py"]
